--- a/package.json
+++ b/package.json
@@ -12,10 +12,10 @@
     "@hookform/resolvers": "^5.1.1",
     "@prisma/client": "^6.11.1",
     "@tanstack/react-query": "^5.76.1",
-    "@types/bcrypt": "^5.0.2",
+    "@types/bcryptjs": "^2.4.6",
     "@types/nprogress": "^0.2.3",
     "axios": "^1.9.0",
-    "bcrypt": "^6.0.0",
+    "bcryptjs": "^3.0.2",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "google-auth-library": "^10.1.0",
